tests/fixtures/effect-compiler/errors/EFX3301.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
      properties:
        test: { sampler: { wrongFilter: linear } }
}%

CCProgram vs %{
  precision mediump float;
  uniform sampler2D test;
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
